# algo-solutions

./: CMakeLists.txt
codewars/: CMakeLists.txt
codewars/4kyu/: CMakeLists.txt  snail.cpp  sum_of_intervals.cpp  sum_of_perfect_squares.cpp
codewars/5kyu/: directions_reductions.cpp  factorial_decom.cpp  find_the_smallest.cpp  greed_is_good.cpp  last_digit_of_large_num.cpp  max_subarray_sum.cpp  primes_in_numbers.cpp  product_of_consecutive.cpp  rgb_to_hex.cpp
codewars/6kyu/: CMakeLists.txt  bit_counting.cpp  count_inversions.cpp  count_inversions_merge_sort.cpp  irreducible_sum_of_rationals.cpp  is_this_prime.cpp  max_profit_stocks.cpp  multiplication_tables.cpp  primorial_of_number.cpp  separate_wheat_from_chaff.cpp  simple_encryption_1.cpp  simple_nearest_prime.cpp  simple_prime_streaming.cpp  sum_of_numbers.cpp  sum_of_parts.cpp  transform_to_prime.cpp  upside_down_numbers.cpp
codewars/7kyu/: CMakeLists.txt  alphabet_grid.cpp  automorphic_number.cpp  balanced_number.cpp  char_code_calculation.cpp  consecutive_ducks.cpp  coprime_validator.cpp  divisible_by_7.cpp  even_times_last.cpp  max_product_adj.cpp  min_num_of_steps.cpp  next_prime.cpp  peak_array_index.cpp  poet_and_pendulum.cpp  printer_error.cpp  product_array.cpp  rearrange_to_get_max.cpp  scaling_square_strings.cpp  special_number.cpp  two_oldest_ages.cpp
dynamic_programming/: CMakeLists.txt  can_sum.cpp
leetcode/: CMakeLists.txt  count_num_ways.cpp  ways_to_move_matrix.cpp
